--- a/MOCO/default.html
+++ b/MOCO/default.html
@@ -11,6 +11,9 @@ html { height: 100%; }
             height: 100%;
             margin: 0;
         }
+         h1 {
+            color: white; /* Couleur du texte */
+        }
     </style>
 </head>
 <body>
