--- a/MOCO/lesions-buccales.html
+++ b/MOCO/lesions-buccales.html
@@ -13,7 +13,7 @@
             overflow: hidden;
             margin: 0;
             padding: 0;
-            background-color: dimgray;
+            background-color: #1a1a1a;
         }
         
         .container {
