--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ td {
 }
 
 #table-container td:not(#title-container td):hover {
+    cursor: pointer;
   background-color: seashell;
   outline: 3px solid indianred;
   z-index: 1;
@@ -160,12 +161,12 @@ td {
     <div id="title-container">
         <table>
         <tr>
-            <td style="height: 33.33%; background-color: darkgray;">
+            <td style="height: 33.33%;">
                 <div id="dr-sanna-cell" class="cell-content">Dr Sanna</div>
             </td>
         </tr>
             <tr>
-                <td style="height: 66.67%; background-color: lightgray;"><div class="cell-content"></div></td>
+                <td style="height: 66.67%;"><div class="cell-content"></div></td>
             </tr>
         </table>
     </div>
