--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ td {
 #table-container td:not(#title-container td):hover {
     cursor: pointer;
   background-color: seashell;
+    border: 2px solid black;
   outline: 3px solid indianred;
   z-index: 1;
   transform: scale(1.1);
