--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@ td {
 
 #title-container tr:first-child .cell-content {
   font-size: 1.2em;
-  text-transform: uppercase;
   font-family: "Arial Black", Arial, sans-serif;
 }
 
@@ -163,7 +162,7 @@ border-radius: 20px;
         <table>
         <tr>
             <td style="height: 33.33%;">
-                <div id="dr-sanna-cell" class="cell-content">Dr Sanna</div>
+                <div id="dr-sanna-cell" class="cell-content">DR SANNA'S COURSES TOOL</div>
             </td>
         </tr>
             <tr>
