--- a/index.html
+++ b/index.html
@@ -190,11 +190,12 @@ border-radius: 20px;
         </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
+<script>
 $(document).ready(function(){
   let initialContent = {}; // Object to store initial content
   let isBack = false; // State to track if back button was clicked
   let menuTitles = {}; // Object to store menu titles
+  let initialTitle = $('#dr-sanna-cell').text(); // Store the initial title
 
   // AJAX request to get the menu data
   $.getJSON("/data/MainMenu.json", function(data) {
@@ -219,7 +220,7 @@ $(document).ready(function(){
           // If the first cell was clicked and we are in a submenu, restore the initial content
           if (isBack && i === 1) {
             updateCells(initialContent);
-            $('#dr-sanna-cell').text('Dr. Sanna');
+            $('#dr-sanna-cell').text(initialTitle); // Use the initial title here
             isBack = false; // Reset the isBack state
           } else if (!isBack) { // Only switch to submenu when not already in a submenu
             const cellData = cellDataMap['cell-' + i];
@@ -262,7 +263,8 @@ $(document).ready(function(){
     }
   }
 });
-            </script>
+</script>
+
      <script>
 $(window).on("load", function() {
     if ('fonts' in document) {
