--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Dr Sanna</title>
     <link rel="preload" href="/icones/arrow-left-solid.svg" as="image">
-       <style>
+           <style>
   #loader {
   transition: all 0.3s ease-out;
   opacity: 1;
@@ -33,8 +33,7 @@ html, body {
 body {
   font-family: Arial, sans-serif;
   display: flex;
-background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
- background-blend-mode: multiply,multiply;
+background: dimgray
 }
 
 #title-container {
@@ -65,12 +64,9 @@ table {
 }
 
 td {
-  transition: background-color 0.3s;
-  border: 3px solid black;
   background-color: seashell;
   box-sizing: border-box;
   overflow: hidden;
-  padding: 0;
   position: relative;
   z-index: 0;
 }
@@ -107,31 +103,43 @@ td {
   text-align: center;
 }
 
+#title-container td {
+  border: 1px solid black;
+  background-color: seashell;
+  color: white;
+}
+
 #title-container tr:first-child .cell-content {
   font-size: 1.2em;
   font-family: "Arial Black", Arial, sans-serif;
+}
+
+#table-container > table {
+  border-collapse: separate;
+  width: 100%;
+  height: 100%;
+}
+
+#table-container td {
+  position: relative;
+  z-index: 0;
+  border: 2px solid black;
+}
+
+#table-container td:hover {
+  cursor: pointer;
+  transform: scale(1.2) translateZ(0);
+  border: 2px solid black;
+  border-radius: 25px;
+  outline: 5px solid indianred;;
+  z-index: 1;
+  background-color: seashell;
 }
 
 #table-container tr .cell-content {
   font-size: 15px;
   text-transform: none;
   font-family: Arial, sans-serif;
-}
-
-#title-container td {
-  border: 3px solid black;
-  background-color: seashell;
-  color: white;
-}
-
-#table-container td:not(#title-container td):hover {
-    cursor: pointer;
-border-radius: 20px;
-  background-color: seashell;
-    border: 2px solid black;
-  outline: 5px solid indianred;
-  z-index: 1;
-  transform: scale(1.2);
 }
 
 .cell-content a {
