--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@ td {
         <table>
             <tr>
                 <td class="square-cell" id="cell-1"><div class="cell-content"><span class="content-text">SCIENCES FONDAMENTALES</span></div></td>
-                <td class="square-cell" id="cell-2"><div class="cell-content"><span class="content-text">BIOMATERIAUX</span></div></td>
-                <td class="square-cell" id="cell-3"><div class="cell-content"><span class="content-text">MOCO</span></div></td>
+                <td class="square-cell" id="cell-2"><div class="cell-content"><span class="content-text">MOCO</span></div></td>
+                <td class="square-cell" id="cell-3"><div class="cell-content"><span class="content-text">PARO/IMPLANTO</span></div></td>
             </tr>
             <tr>
-                <td class="square-cell" id="cell-4"><div class="cell-content">OCE</div></td>
-                <td class="square-cell" id="cell-5"><div class="cell-content">PARO/IMPLANTO</div></td>
+                <td class="square-cell" id="cell-4"><div class="cell-content">OC</div></td>
+                <td class="square-cell" id="cell-5"><div class="cell-content">ENDODONTIE</div></td>
                 <td class="square-cell" id="cell-6"><div class="cell-content">PROTHESES</div></td>
             </tr>
             <tr>
                 <td class="square-cell" id="cell-7"><div class="cell-content">PEDO</div></td>
-                <td class="square-cell" id="cell-8"><div class="cell-content">OCCLUSO</div></td>
+                <td class="square-cell" id="cell-8"><div class="cell-content">ODONTOLOGIE SPECIFIQUE</div></td>
                 <td class="square-cell" id="cell-9"><div class="cell-content">Ressources utiles</div></td>
             </tr>
         </table>
