--- a/index.html
+++ b/index.html
@@ -220,15 +220,50 @@ td {
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-$(document).ready(function(){
+$(document).ready(function() {
   let initialContent = {};
   let isBack = false;
   let initialTitle = $('#dr-sanna-cell').text();
 
-  // Dossier contenant les images à précharger
-  const imageFolder = '/icones/';
-  // Tableau pour stocker les noms des images à précharger
-  const imageFileNames = [];
+  const imageFolder = "/icones/"; // Dossier des images à précharger
+
+  // Récupérer la liste des noms de fichiers d'images du dossier
+  $.ajax({
+    url: imageFolder,
+    success: function(data) {
+      const imageFileNames = [];
+      $(data).find("a").attr("href", function(i, fileName) {
+        if (fileName.match(/\.(jpe?g|png|gif)$/)) {
+          imageFileNames.push(fileName);
+        }
+      });
+
+      // Préchargement des images du dossier
+      const preloadedImages = [];
+      let imagesLoaded = 0;
+
+      function preloadImages() {
+        for (let i = 0; i < imageFileNames.length; i++) {
+          const imageSrc = imageFolder + imageFileNames[i];
+          const image = new Image();
+          image.onload = function() {
+            imagesLoaded++;
+            if (imagesLoaded === imageFileNames.length) {
+              $("#loader").fadeOut("slow");
+            }
+          };
+          image.src = imageSrc;
+          preloadedImages.push(image);
+        }
+      }
+
+      if (imageFileNames.length > 0) {
+        preloadImages();
+      } else {
+        $("#loader").fadeOut("slow");
+      }
+    }
+  });
 
   $.getJSON("/data/MainMenu.json", function(data) {
     const cellDataMap = {};
@@ -237,10 +272,10 @@ $(document).ready(function(){
     });
 
     initialContent = cellDataMap["MainMenu"];
-    updateCells(initialContent); 
+    updateCells(initialContent);
 
     for (let i = 1; i <= 9; i++) {
-      $('#cell-' + i).click(function(){
+      $('#cell-' + i).click(function() {
         if (isBack && i === 1) {
           updateCells(initialContent);
           $('#dr-sanna-cell').text(initialTitle);
@@ -277,7 +312,7 @@ $(document).ready(function(){
           const icon = $('<img>').attr('src', '/icones/arrow-left-solid.svg').addClass('arrow-left-icon');
           cellContentElement.empty().append(icon);
         } else {
-          const imageSrc = imageFolder + cellDataItem.toLowerCase().replace(/\s/g, '-').replace('/', '-').toLowerCase() + '.png';
+          const imageSrc = '/icones/' + cellDataItem.toLowerCase().replace(/\s/g, '-').replace('/', '-').toLowerCase() + '.png';
           const image = $('<img>').addClass('content-image').attr('src', imageSrc);
           const text = $('<span>').addClass('content-text').text(cellDataItem);
           const content = $('<div>').addClass('content-container').append(image).append(text);
@@ -288,56 +323,9 @@ $(document).ready(function(){
       }
     }
   }
-
-  // Fonction pour précharger les images
-  function preloadImages(imageUrls, callback) {
-    const totalCount = imageUrls.length;
-    let loadedCount = 0;
-
-    // Fonction de rappel lorsqu'une image est chargée
-    function imageLoaded() {
-      loadedCount++;
-      if (loadedCount === totalCount) {
-        callback();
-      }
-    }
-
-    // Préchargement de chaque image
-    imageUrls.forEach(function(imageUrl) {
-      const image = new Image();
-      image.onload = imageLoaded;
-      image.onerror = imageLoaded; // Gère les erreurs de chargement des images
-      image.src = imageUrl;
-    });
-  }
-
-  // Fonction pour obtenir les URL des images à précharger
-  function getImageUrls() {
-    const imageUrls = [];
-    $('img.content-image').each(function() {
-      const imageUrl = $(this).attr('src');
-      imageUrls.push(imageUrl);
-    });
-    return imageUrls;
-  }
-
-  // Obtenir les noms de fichier des images dans le dossier
-  $.ajax({
-    url: imageFolder,
-    success: function(data) {
-      $(data).find('a:contains(".png")').each(function() {
-        const fileName = $(this).attr("href");
-        imageFileNames.push(imageFolder + fileName);
-      });
-
-      // Précharger les images
-      preloadImages(imageFileNames, function() {
-        // Toutes les images sont chargées, masquer le loader
-        $("#loader").fadeOut("slow");
-      });
-    }
-  });
 });
+
+
 </script>
      <script>
 $(window).on("load", function() {
